[package]
name = "lspce-module"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "0.92.0"
crossbeam-channel = "0.5.4"
chrono = "0.4"
emacs = "0.18.0"
serde = { version = "1.0.83", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
lazy_static = "1.4.0"
