[package]
name = "lspce"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# lsp-types = "0.92.0"
# jsonrpc-core-client = "18.0.0"
# tokio = { version = "1.17.0", features = ["full"] }
emacs = "0.18.0"