[package]
name = "lspce"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "0.92.0"
emacs = "0.18.0"
serde_json = "1.0"
httparse = "1.3.5"
bytes = "1.0"
memchr = "2.4.1"